# MyMasterpieceGame

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h  Enemy.h  Player.h  Textures.h  func.h
include/Engine/: Character.h  Constants.h  PlayerController.h
include/GUI/: Fonts.h  Menu.h  Minimap.h
src/: Camera.cpp  Character.cpp  Enemy.cpp  Menu.cpp  Minimap.cpp  Player.cpp  PlayerController.cpp  func.cpp
